--- a/Sorevnovatelni_DS/HW_1/Nekrasov_Konstantin_HW_1.ipynb
+++ b/Sorevnovatelni_DS/HW_1/Nekrasov_Konstantin_HW_1.ipynb
@@ -1849,21 +1849,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import phik\n",
-    "# from phik import resources, report\n",
-    "# import seaborn as sns\n",
+    "import phik\n",
+    "from phik import resources, report\n",
+    "import seaborn as sns\n",
     "\n",
-    "# # Вычисляем корреляцию Phik \n",
-    "# phik_matrix = final_df_cleaned.phik_matrix()\n",
+    "# Вычисляем корреляцию Phik \n",
+    "phik_matrix = final_df_cleaned.phik_matrix()\n",
     "\n",
-    "# # Отображение корреляционной матрицы Phik\n",
-    "# print(phik_matrix)\n",
+    "# Отображение корреляционной матрицы Phik\n",
+    "print(phik_matrix)\n",
     "\n",
-    "# # Визуализация корреляционной матрицы \n",
-    "# plt.figure(figsize=(12, 10))\n",
-    "# sns.heatmap(phik_matrix, annot=True, fmt=\".2f\", cmap=\"viridis\")\n",
-    "# plt.title(\"Phik Correlation Matrix\")\n",
-    "# plt.show()"
+    "# Визуализация корреляционной матрицы \n",
+    "plt.figure(figsize=(12, 10))\n",
+    "sns.heatmap(phik_matrix, annot=True, fmt=\".2f\", cmap=\"viridis\")\n",
+    "plt.title(\"Phik Correlation Matrix\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -2248,10 +2248,10 @@
    ],
    "source": [
     "import shap\n",
-    "# Создание объекта TreeExplainer с использованием вашей обученной модели CatBoost\n",
+    "# Создание объекта TreeExplainer \n",
     "explainer = shap.TreeExplainer(model)\n",
     "\n",
-    "# Вычисление SHAP values для тестового набора данных\n",
+    "# Вычисление SHAP values\n",
     "shap_values = explainer.shap_values(pool_test)\n",
     "\n",
     "# Визуализация средней абсолютной величины значений SHAP для каждого признака\n",
